# instrument-classifier-v2

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: relazione.md
docs/superpowers/plans/: 2026-07-06-multibranch-redesign.md
docs/superpowers/specs/: 2026-07-04-multibranch-redesign-design.md
notebooks/: colab_train.ipynb
scripts/: download_pretrained.py  run_ablation.py  train.py
src/instrument_classifier/: __init__.py  evaluate.py  features.py  metrics.py  train.py
src/instrument_classifier/data/: dataset.py  transforms.py
src/instrument_classifier/models/: cnn14.py
tests/: conftest.py  scripts_ablation_shim.py  scripts_preprocess_shim.py  test_ablation.py  test_config.py  test_dataset.py  test_evaluate.py  test_features.py  test_labels.py  test_metrics.py  test_model.py  test_multibranch.py  test_preprocess.py  test_training_integration.py  test_transforms.py  test_windowing.py
