[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instrument-classifier"
version = "0.1.0"
description = "Musical instrument recognition on IRMAS via transfer learning (PANNs CNN14 finetuning)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "numpy>=2.0",
    "torchlibrosa>=0.1.0",
    "soundfile>=0.12",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "tensorboard>=2.13",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
irmas-train = "instrument_classifier.train:main"
irmas-eval = "instrument_classifier.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
